--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ crossbeam = "0.8"
 rand = "0.8.1"
 clap = "2.27.0"
 criterion = "0.3"
+
+[[bench]]
+name = "benchmark"
+path = "src/benches/benchmark.rs"
+harness = false
